--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   google_maps_flutter: ^2.5.0
 
   flutter_spinkit: ^5.2.0
+  google_generative_ai: ^0.4.6
+  share_plus: ^10.1.4
 
 
 
